Chat fixes; Can chat even if offline

--- a/templates/login.html
+++ b/templates/login.html
@@ -20,6 +20,7 @@
 
 	<link rel="stylesheet" type="text/css" href="../static/css/util.css">
 	<link rel="stylesheet" type="text/css" href="../static/css/main.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
 
 </head>
 
@@ -92,6 +93,15 @@
 	</script>
 
 	<script src="js/main.js"></script>
+
+	<script>
+		$(document).ready(function () {
+			var private_socket = io('http://127.0.0.1:5000/private');
+			var myEmail = '{{email}}';
+			private_socket.emit('email', myEmail);
+			console.log("shade")
+		});
+	</script>
 
 </body>
 
