--- a/templates/chat.html
+++ b/templates/chat.html
@@ -982,6 +982,7 @@
 
         private_socket.on('new_private_message', function (msg) {
             console.log("bro")
+            // alert('hi');
             var unix_timestamp = Math.round((new Date()).getTime() / 1000);
             var date = new Date(unix_timestamp * 1000);
             // Hours part from the timestamp
