--- a/templates/identify.html
+++ b/templates/identify.html
@@ -50,11 +50,18 @@
 						</button>
 					</div>
 
-
-					<div class="text-center p-t-136">
+					<br><br>	
+					<div class="text-center">
 						<a class="txt2" href="/signup">
 							Sign Up
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
+						</a>
+					</div>
+
+					<div class="text-center p-t-136">
+						<a class="txt2" href="/admin_login">
+							Are you an Admin?
+							<i class="fa fa-user m-l-5" aria-hidden="true"></i>
 						</a>
 					</div>
 				</form>
