--- a/templates/chat.html
+++ b/templates/chat.html
@@ -57,41 +57,44 @@
                     <!-- sideBar -->
                     <div class="row sideBar">
                         <div class="row sideBar-body">
+                            {% for friend in friends %}
                             <div class="col-sm-3 col-xs-3 sideBar-avatar">
                                 <div class="avatar-icon">
-                                    <img src="">
+                                    <img src=" data:;base64,{{friend['photo']}} ">
+                                    <!-- <script>console.log({{friend['photo']}});</script> -->
                                 </div>
                             </div>
                             <div class="col-sm-9 col-xs-9 sideBar-main">
                                 <!-- <form class="form center-block" action="/chat" method="POST"> -->
-                                {% for friend in friends %}
-
-                                <form class="form center-block" action="/chat/{{friend['email']}}" method="POST">
-                                    <div class="row" id="send_private_message">
+                                <form class="form center-block" action="/chat/{{friend['email']}}" method="POST"
+                                    id="choose_friend">
+                                    <!-- <button type="submit, button" class="block"> -->
+                                    <div class="row" id="send_private_message"
+                                        onclick="document.forms['choose_friend'].submit()">
                                         <div class="col-sm-8 col-xs-8 sideBar-name">
                                             <input type="hidden" name="message_to_send" id="message_to_send" value="">
-                                            <button type="submit">
-                                                <span class="name-meta">{{ friend['username'] }}
-                                                </span></button>
+                                            <!-- <button type="submit"> -->
+                                            <span class="name-meta">{{ friend['username'] }}</span>
+                                            <!-- </button> -->
                                         </div>
-
-
                                     </div>
+                                    <!-- </button> -->
                                 </form>
 
-                                <div class="row" onclick=location.href="/chat/{{friend['email']}}">
+                                <!-- <div class="row" onclick=location.href="/chat/{{friend['email']}}">
                                     <div class="col-sm-8 col-xs-8 sideBar-name">
                                         <span class="name-meta">{{ friend['username'] }}
                                         </span>
                                     </div>
-                                    <!-- <div class="col-sm-4 col-xs-4 pull-right sideBar-time">
+                                    <div class="col-sm-4 col-xs-4 pull-right sideBar-time">
                                         <span class="time-meta pull-right">18:18
                                         </span>
-                                    </div> -->
-                                </div>
-                                {% endfor %}
+                                    </div>
+                                </div> -->
+
                                 <!-- </form> -->
                             </div>
+                            {% endfor %}
                         </div>
                     </div>
                     <!-- Sidebar End -->
@@ -162,7 +165,7 @@
                 <div class="row heading">
                     <div class="col-sm-2 col-md-1 col-xs-3 heading-avatar">
                         <div class="heading-avatar-icon">
-                            <img src="">
+                            <img src="data:;base64,{{ photo }}">
                         </div>
                     </div>
                     <div class="col-sm-8 col-xs-7 heading-name">
@@ -222,9 +225,10 @@
                             <!-- <div class="col-sm-1 col-xs-1 reply-emojis">
                         <i class="fa fa-smile-o fa-2x"></i>
                     </div> -->
-                            <div class="col-sm-9 col-xs-9 reply-main">
+                            <div class="col-sm-11 col-xs-11 reply-main">
                                 <textarea class="form-control blah" rows="1" id="message_to_send" name="message_to_send"
                                     form="textform"></textarea>
+            
                                 <!-- <script>
                                 function myFunction() {
                                     // console.log("SHADE")
@@ -254,13 +258,14 @@
                         </script> -->
 
                             <form class="form center-block" action="/chat/{{email}}" method="post" id="textform">
-                                <div style="padding-left:8px;padding-bottom:8px" id="send_private_message">
+                                <!-- <div style="padding-left:8px;padding-bottom:8px" id="send_private_message"> -->
                                     <!-- <input type="hidden" name="message_to_send" id="message_to_send"> -->
-                                    <button class="btn btn-primary btn-sm">
+                                    <button class="btn btn-primary btn-sm" type="submit">
                                         <i class="fa fa-send fa-2x" aria-hidden="true"></i>
                                     </button>
-                                </div>
+                                <!-- </div> -->
                             </form>
+                            <!-- </div> -->
                             <!-- 
                         <div class="col-sm-1 col-xs-1 reply-send" id="send_private_message" onclick=myFunction2();
                             location.href="/chat/{{email}}" ; send_private_message()>
@@ -961,7 +966,7 @@
             var seconds = "0" + date.getSeconds();
 
             // Will display time in 10:30:23 format
-            var formattedTime = date.getFullYear() + '-' + date.getMonth()+1 + '-' + date.getDate() + ' ' + hours + ':' + minutes.substr(-2) + ':' + seconds.substr(-2);
+            var formattedTime = date.getFullYear() + '-' + date.getMonth() + 1 + '-' + date.getDate() + ' ' + hours + ':' + minutes.substr(-2) + ':' + seconds.substr(-2);
 
             $("#conversation").append('<div class="row message-body"><div class="col-sm-12 message-main-sender"> <div class="sender"><div class="message-text">' + message_to_send + '</div><span class="message-time pull-right">' + formattedTime + '</span></div></div></div>');
 
@@ -991,7 +996,7 @@
             var minutes = "0" + date.getMinutes();
             // Seconds part from the timestamp
             var seconds = "0" + date.getSeconds();
-            var month = date.getMonth()+1
+            var month = date.getMonth() + 1
             var formattedTime = date.getFullYear() + '-' + month + '-' + date.getDate() + ' ' + hours + ':' + minutes.substr(-2) + ':' + seconds.substr(-2);
 
             // Will display time in 10:30:23 format
