--- a/templates/myProfile.html
+++ b/templates/myProfile.html
@@ -229,6 +229,23 @@
                             <h2 class="w3-text-grey w3-padding-16"><i
                                     class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text"></i>Posts
                             </h2>
+                            {% for post in posts %}
+                            <div class="w3-container">
+                                <h3 class="w3-opacity"><b>{{post['username']}}</b><p  style="float:right;font-style: normal; font-size: 0.7em;">{{post['timestamp']}}</p></h3>
+                                
+                                <!-- <h6 class="w3-text"><i
+                                        class="fa fa-calendar fa-fw w3-margin-right">{{post['timestamp']}}</i>
+                                </h6> -->
+                                {% if post['image'] != "" %}
+                                <img src="data:;base64,{{post['image'] }}" style="margin:15px;margin-left: 0;max-width: 100%;">
+                                {% endif %}
+
+                                <h4>{{post['text']}}</h4>
+
+                                <hr>
+                            </div>
+                            {% endfor %}
+<!-- 
                             <div class="w3-container">
                                 <h5 class="w3-opacity"><b>Some Post</b></h5>
                                 <h6 class="w3-text"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015
@@ -261,18 +278,7 @@
                                     repellendus iure,
                                     iste.</p>
                                 <hr>
-                            </div>
-                            <div class="w3-container">
-                                <h5 class="w3-opacity"><b>Some Post</b></h5>
-                                <h6 class="w3-text"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015
-                                </h6>
-                                <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt
-                                    aspernatur est
-                                    reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque
-                                    repellendus iure,
-                                    iste.</p>
-                                <hr>
-                            </div>
+                            </div> -->
 
                         </div>
 
